[package]
name = "rcfw"
version = "0.1.0"
edition = "2018"

[dependencies]
alloc-cortex-m = "0.4.0"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
defmt = { version = "0.3.0", features = ["alloc"] }
defmt-rtt = "0.3.0"
nb = "1.0.0"
nrf52840-hal = { version = "0.13.0" }
nrf-softdevice-s140 = { git = "https://github.com/lashbits/nrf-softdevice" }
scopeguard = { version = "1.1.0", default-features = false }

[features]
default = [
    "52840",
    "s140",
]
52840 = []
s140 = []
